# internal_lcos_imaging

./: .gitignore  pyproject.toml  to-do.md  todo.md
src/: main.py  sac-drop.py
src/algebra/: cartesian_pose_math.py  coord_sys_math.py  plane_math.py
src/boot/: parameter-retrieval.py  temp-log.md
src/configs/: INTERNAL-LCOS-NOTES.json  dispense_param_sets.json  process-config.json  station-config.json  tool-center-points.json
src/core/: camera-control.py  camera_control.py  dispenser_control.py  lens_control.py  lighting-control.py  lighting_control.py  robot_control.py  vision_control.py
src/internal_lcos_imaging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/logging_setup/: log_config.py  utilities.py
