[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "internal_lcos_imaging"
version = "0.0.0"
description = ""
authors = [
  { name = "Brandon Moncrieffe", email = "brandon.moncrieffe@lumentum.com" }
]

readme = "README.md"
requires-python = ">=3.12.2"

dependencies = [
  "robot-control==1.1.1",
  "mudi==0.0.4",
  "optokummenberg>=1.0.4565",
  "optoicc==2.0.4922",
  "pypylon>=26.0.0",
  "numpy>=2.0.0",
  "opencv-python>=4.0.0",
  "vps-lightcontrol",
  "pyserial>=3.5"
]

[tool.uv.sources]
optoicc = { path = "third_party/icc4c/optoICC-2.0.4922-py3-none-any.whl" }
optokummenberg = { path = "third_party/icc4c/optoKummenberg-1.0.4894-py3-none-any.whl" }
vps-lightcontrol = { git = "https://github.com/lite-cnp/VPS_LightControl_Driver.git" }
[tool.uv]
extra-index-url = ["http://pypkgs.li.lumentuminc.net/transport/rel/+simple/"]
